--- a/requirements.txt
+++ b/requirements.txt
@@ -142,6 +142,7 @@ rpds-py==0.30.0
 safehttpx==0.1.7
 scikit-learn==1.8.0
 scipy==1.17.0
+seaborn==0.13.2
 semantic-version==2.10.0
 Send2Trash==2.1.0
 sentencepiece==0.2.1
